Fixes issue #2103 - Fix code smells (#2104)